<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button3"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_3"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button5"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button6"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_6"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button8"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button9"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_9"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/TEXT_VIEW"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/R_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="65dp"
        android:text="@string/OneMoreTime"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>